# snakedeploy

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  release-please-config.json  setup.cfg  setup.py  versioneer.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: announce-release.yml  main.yml  release-please.yml
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/api_reference/: snakedeploy.doctree
docs/_build/doctrees/api_reference/internal/: modules.doctree  snakedeploy.doctree
docs/_build/doctrees/deploy/: deploy.doctree  template.doctree
docs/_build/doctrees/getting_started/: installation.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/snakedeploy/: client.html  logger.html  providers.html
docs/_build/html/_sources/api_reference/: snakedeploy.rst.txt
docs/_build/html/_sources/api_reference/internal/: snakedeploy.rst.txt
docs/_build/html/_sources/getting_started/: installation.rst.txt
docs/_build/html/api_reference/: snakedeploy.html
docs/_build/html/api_reference/internal/: modules.html  snakedeploy.html
docs/_build/html/deploy/: deploy.html  template.html
docs/_build/html/getting_started/: installation.html
docs/_static/: custom.css  theme.css
docs/api_reference/: snakedeploy.rst
docs/api_reference/internal/: modules.rst  snakedeploy.rst
docs/deploy/: deploy.rst  template.rst
docs/getting_started/: installation.rst  tools.rst
docs/snakemake_developers/: scaffold_snakemake_plugins.rst
docs/workflow_developers/: update_conda_envs.rst  update_snakemake_wrappers.rst
docs/workflow_users/: input_registration.rst  workflow_deployment.rst
img/: snakedeploy.xcf
snakedeploy/: __init__.py  _version.py  client.py  collect_files.py  conda.py  conda_version.py  deploy.py  exceptions.py  logger.py  providers.py  prs.py  snakemake_wrappers.py  utils.py  version.py
snakedeploy/providers/: __init__.py  base.py  github.py
snakedeploy/scaffold_plugins/: __init__.py  common.py  executor_plugins.py  logger_plugins.py  report_plugins.py  scheduler_plugins.py  software_deployment_plugins.py  storage_plugins.py
snakedeploy/templates/: post-instructions.txt.jinja  use_module.smk.jinja
snakedeploy/templates/plugins/: ci.yml.j2  conventional_prs.yml.j2  release_please.yml.j2
snakedeploy/templates/plugins/executor-plugins/: init.py  tests.py.j2
snakedeploy/templates/plugins/logger-plugins/: init.py  tests.py
snakedeploy/templates/plugins/report-plugins/: init.py  tests.py
snakedeploy/templates/plugins/scheduler-plugins/: init.py  tests.py
snakedeploy/templates/plugins/software-deployment-plugins/: init.py  tests.py
snakedeploy/templates/plugins/storage-plugins/: init.py  tests.py
src/snakedeploy/: __init__.py  client.py  deploy.py  exceptions.py  logger.py  providers.py
src/snakedeploy/templates/: post-instructions.txt.jinja  use_module.smk.jinja
tests/: __init__.py  test-env.yaml  test-snakefile.smk  test_client.sh  test_providers.py
