[project]
name = "snakedeploy"
version = "0.11.0"
description = "Deployment and maintenance related toolbox for Snakemake"
license = "MPL-2.0"
authors = [
    { name = "Johannes Koester", email = "johannes.koester@uni-due.de"},
    { name = "Vanessa Sochat", email = "vsochat@stanford.edu" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "packaging>=25.0",
    "pandas>=2.3.1",
    "pygithub>=2.6.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "reretry>=0.11.8",
    "toml>=0.10.2",
]

[project.urls]
Homepage = "https://snakedeploy.readthedocs.io"
Repository = "https://github.com/snakemake/snakedeploy"
Documentation = "https://snakedeploy.readthedocs.io"


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
snakedeploy = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.feature.dev.tasks]
format = "ruff format"
check = "ruff check"
test = "/bin/bash tests/test_client.sh"
